# pixy

./: .gitignore  README.md  annotated.html  classes.html  contributors.txt  dir_000003_000004.html  dir_26c83dcf08d5476d03481c5914e32f78.html  dir_26c83dcf08d5476d03481c5914e32f78_dep.map  dir_26c83dcf08d5476d03481c5914e32f78_dep.md5  dir_32efd866987aca842a61276126bd4897.html  dir_32efd866987aca842a61276126bd4897_dep.map  dir_32efd866987aca842a61276126bd4897_dep.md5  dir_656c07d2725809f149a4c351d4dbe9ef.html  dir_656c07d2725809f149a4c351d4dbe9ef_dep.map  dir_656c07d2725809f149a4c351d4dbe9ef_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_84e79ac80b913c2fb5b9e077744e9498.html  dir_84e79ac80b913c2fb5b9e077744e9498_dep.map  dir_84e79ac80b913c2fb5b9e077744e9498_dep.md5  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  license.txt  pixy_8cpp.html  pixy_8cpp_source.html  pixy_8h.html  pixy_8h_source.html  robodetection.m  struct_block-members.html  struct_block.html  tabs.css
arduino/libraries/: create.bash
arduino/libraries/Pixy/: Pixy.cpp  Pixy.h  PixyI2C.h  PixyUART.h  TPixy.h  keywords.txt
arduino/other/: pantilt_challenging.ino
common/: blob.cpp  blob.h  blobs.cpp  blobs.h  calc.h  chirp.cpp  chirp.hpp  colorlut.cpp  colorlut.h  link.h  pixydefs.h  pixytypes.h  qqueue.cpp  qqueue.h  simplevector.h
device/drivers/windows/: pixy.inf  pixy_dfu.inf
device/gcc/m0/: .cproject
device/gcc/pixy_m4/: .cproject
device/libpixy/: analogdig.cpp  analogdig.h  camera.cpp  camera.h  cameravals.h  chirp.c  chirp.cpp  chirp.h  chirp.hpp  chirpm0.cpp  chirpm0.h  chirpusb.cpp  chirpusb.h  colorlut.cpp  colorlut.h  core_cm0.h  core_cm4.h  core_cmInstr.h  cycletimer.h  debug.c  debug.h  debug_frmwrk.c  debug_frmwrk.h  exec_m0.c  exec_m0.h  flash.cpp  flash.h  fpu_init.c  frame_m0.c  frame_m0.h  i2c.cpp  i2c.h  ipc_mbx.c  ipc_mbx.h  iserial.h  led.cpp  led.h  libpixy_m0.uvproj  libpixy_m4.uvproj  link.h  (+63 more)
device/lpcxpresso/m0/: .cproject  .project
device/lpcxpresso/pixy_m0/: .cproject
device/lpcxpresso/pixy_m4/: .cproject  .project
device/lpcxpresso/video/: .cproject  video Release.launch
device/pixyflash/: Internal SRAM.ini  flash.cpp  flash.h  flashprog.cpp  flashprog.h  lpc43xx_rgu.c  lpc43xx_rgu.h  main.cpp  pixyflash.uvproj  ram.sct
device/video/: DigitalPotControl.ino  Internal SRAM.ini  RAM.ini  blob.cpp  blob.h  blobs.cpp  blobs.h  button.cpp  button.h  cblob.cpp  cblob.h  conncomp.cpp  conncomp.h  exec.cpp  exec.h  m0.ini  m0.uvproj  main_m0.c  main_m4.cpp  param.cpp  param.h  progblobs.cpp  progblobs.h  progchase.cpp  progchase.h  progpt.cpp  progpt.h  progvideo.cpp  progvideo.h  ram.sct  spifi.ini  spifi.sct  startup_LPC43xx_m0.s  video.sct  video.uvproj  video_m4_m0.uvmpw
doc/: Doxyfile
host/: buildpixymon.sh
host/libpixyusb/: CMakeLists.txt  Makefile  VERSION  configure
host/libpixyusb/cmake/hello_pixy/: CMakeLists.txt
host/libpixyusb/cmake/libpixyusb/: CMakeLists.txt
host/libpixyusb/example/: Makefile  hello_pixy.c
host/libpixyusb/include/: pixy.h
host/libpixyusb/src/: chirpreceiver.cpp  chirpreceiver.hpp  interpreter.hpp  pixy.c  pixy.cpp  pixyinterpreter.cpp  pixyinterpreter.hpp  usblink.cpp  usblink.h
host/libpixyusb/src/utils/: mutex.cpp  mutex.hpp  timer.cpp  timer.hpp
host/linux/: README  README.linux  buildpixymon.sh  pixy.rules
host/mac/: README.mac  libusb-1.0.dylib  libusb-1.0.la
host/matlab/colormodel/: autoplot.m  boundtest.m  createlut.m  generatelut.m  generatelut2.m  generatelut3.m  generatelut4.m  map.m  map2.m  membership.m  membership3.m  membership4.m  metascript.m  newfile.m  pixfilter.m  pixfilter4.m  plotall.m  plotcluster.m  plotlut2.m  script.m  script2.m  script3.m  script4.m  script5.m  script6.m  script8.m
host/pixymon/: about.ui  aboutdialog.cpp  aboutdialog.h  blob.cpp  blob.h  blobs.cpp  blobs.h  blobs2.cpp  buildpixymon.sh  calc.cpp  calc.h  cblobmodule.cpp  cblobmodule.h  cccmodule.cpp  cccmodule.h  chirpmon.cpp  chirpmon.h  clut.cpp  clut.h  colorblob.cpp  colorblob.h  colorlut.cpp  colorlut.h  configdialog.cpp  configdialog.h  configdialog.ui  connectevent.cpp  connectevent.h  console.cpp  console.h  dataexport.cpp  dataexport.h  debug.cpp  dfu.cpp  dfu.h  dfu_info.h  disconnectevent.cpp  disconnectevent.h  flash.cpp  flash.h  (+38 more)
host/pixymon/matlab/: autoplot2.m  generatelut.m  iterateline.m  plotall.m  writedata.m
host/windows/: README.windows  libusb.h
misc/gcc/pixy_m0/: .project  (+1 more)
releases/firmware_general/: pixy_firmware-2.0.19-general.hex
releases/firmware_lego/: pixy_firmware-2.0.19-lego.hex
scripts/: build_hello_pixy.sh  build_libpixyusb.sh  build_libpixyusb_swig.sh  build_pantilt_c_demo.sh  build_pantilt_demo.sh  build_pantilt_python_demo.sh  build_pixymon_src.sh  install_libpixyusb.sh  pack_pixymon_src.sh
search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  search.css  search.js  variables_0.js  variables_1.js  variables_5.js  variables_7.js  variables_8.js
src/common/: blob.cpp  blob.h  blobs.cpp  blobs.h  chirp.cpp  chirp.hpp  colorlut.cpp  colorlut.h  debug.h  pixydefs.h  pixytypes.h  qqueue.cpp
src/device/: makefile
src/host/: buildpixymon.sh
src/host/hello_pixy/: CMakeLists.txt  hello_pixy.cpp
src/host/hello_pixy/cmake/: Findlibpixyusb.cmake  VERSION
src/host/libpixyusb/: CMakeLists.txt
src/host/libpixyusb/cmake/: Findlibusb-1.0.cmake  VERSION
src/host/libpixyusb/include/: pixy.h
src/host/libpixyusb/src/: chirpreceiver.cpp  chirpreceiver.hpp  interpreter.hpp  pixy.cpp  pixyinterpreter.cpp  pixyinterpreter.hpp  usblink.cpp  usblink.h
src/host/libpixyusb/src/utils/: timer.cpp  timer.hpp
src/host/pan_tilt_demo/: CMakeLists.txt  pan_tilt.cpp
src/host/pantilt_in_c/: CMakeLists.txt  pan_tilt.cpp
tools/: build_pixymon_src.sh  pack_pixymon_src.sh
version/: PIXYMON
(+668 files in other folders)
